[metadata]
name = taps_music
version = attr: mir_eval.__version__
license = MIT
author = Andrew McLeod
author_email = andrew.mcleod@idmt.fraunhofer.de
keywords = audio music transcription AMT mir zero-shot learning domain shift adaptation
description = A package to improve the performance of automatic music transcription (AMT) systems under domain shift, without requiring any re-training or additional data
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.7
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    taps_music
install_requires =
    librosa
    numpy
    pyrubberband
    soundfile
    tqdm
